# Automatic-Distortion-Rectification-for-VisionAI-Applications

./: CMakeLists.txt  README.md  undist-video.txt
images/: Thumbs.db  avi2mp4.py
images/fish/: Thumbs.db
images/w/: Thumbs.db
images/wide/: Thumbs.db
libdistrect/: CMakeLists.txt  GetFMin.cmake  Matlab.cmake
libdistrect/fmin/: GetFMin.m  getDistParamError.p
libdistrect/include/: libdistrect.hpp
libdistrect/src/: ilinesegment.cpp  libdistrect.cpp
sample/: CMakeLists.txt  main.cpp
